<resources>
    <string name="app_name">PLAYGROUND</string>
    <string name="title_home">Home</string>
    <string name="title_ajustes">Ajustes</string>
    <string name="title_sonido">Sonido</string>
    <string name="games_for_kids">GAMES FOR KIDS</string>
    <string name="scrol_juegos">Juegos</string>
    <string name="button">ANIMALS</string>
    <string name="button2">CAT BOUNCE</string>
    <string name="button3">NUMBER DASH</string>
    <string name="button4">HAPPY COLORS</string>
    <string name="button5">PIANO</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activar_sonido_de_fondo">Musica de fondo</string>
    <string name="sonido_animals">Sonido Animals</string>
    <string name="configurracion">"¡Bienvenido a nuestra aplicación didáctica para niños!"</string>
    <string name="configurraciona">Esta aplicación ha sido diseñada para que los niños de entre 2 a 5 años disfruten aprendiendo a través de una variedad de juegos interactivos y educativos.</string>
    <string name="piece1" />
    <string name="piece2" />
    <string name="piece3" />
    <string name="piece4" />
</resources>