<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="0dp"
    android:background="@color/cat_bounce"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/puzzleLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <!-- Aquí van las cuatro piezas del rompecabezas -->

        <ImageView
            android:id="@+id/piece1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"


            android:contentDescription="@string/piece1"
            android:src="@drawable/piece1" />

        <ImageView
            android:id="@+id/piece2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignTop="@id/piece1"
            android:layout_toEndOf="@id/piece1"
            android:contentDescription="@string/piece2"
            android:src="@drawable/piece2" />

        <ImageView
            android:id="@+id/piece3"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/piece1"
            android:layout_alignStart="@id/piece1"
            android:contentDescription="@string/piece3"
            android:src="@drawable/piece3" />

        <ImageView
            android:id="@+id/piece4"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignTop="@id/piece3"
            android:layout_toEndOf="@id/piece3"
            android:contentDescription="@string/piece4"
            android:src="@drawable/piece4" />

    </RelativeLayout>

    <Button
        android:id="@+id/shuffleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/puzzleLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        app:backgroundTint="@null"
        android:backgroundTint="@color/catbounce_barra"
        android:text="Revolver"
        app:iconTint="#E08989" />
    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/catbounce_barra"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="57dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@drawable/ic_home"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view2" />

</RelativeLayout>
