<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:src="@drawable/vd_vector"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/btn"
            android:fontFamily="@font/bobby_jones"
            android:text="@string/button"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:backgroundTint="@null"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/btn1"
            android:fontFamily="@font/bobby_jones"
            android:text="@string/button2"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:backgroundTint="@null"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bobby_jones"
            android:text="@string/button3"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:background="@drawable/btn2"
            app:cornerRadius="30dp"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bobby_jones"
            android:text="@string/button4"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:background="@drawable/btn3"
            app:cornerRadius="30dp"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/bobby_jones"
            android:text="@string/button5"
            android:textColor="@color/black"
            app:backgroundTint="@null"
            android:background="@drawable/btn4"
            app:cornerRadius="30dp"
            android:textSize="35sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/btn1"
            android:fontFamily="@font/bobby_jones"
            android:text="Puzzle"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:backgroundTint="@null"
            app:cornerRadius="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="90dp"
            android:background="@drawable/btn2"
            android:fontFamily="@font/bobby_jones"
            android:text="button7"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:backgroundTint="@null"
            app:cornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button6" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>